--- a/contribs/gcp/slurm-cluster.yaml
+++ b/contribs/gcp/slurm-cluster.yaml
@@ -31,28 +31,29 @@ resources:
     region                  : us-central1
     cidr                    : 10.10.0.0/16
 
-    controller_machine_type : n1-standard-2
-    compute_machine_type    : n1-standard-2
+    controller_machine_type : n1-standard-8
+    compute_machine_type    : n1-standard-4
     login_machine_type      : n1-standard-1
 
     # Optional compute configuration fields
-    #preemptible_bursting    : False
-    #external_compute_ips    : False
-    #compute_disk_type       : pd-standard
-    #compute_disk_size_gb    : 10
-    #controller_disk_type    : pd-standard
-    #controller_disk_size_gb : 100
-    #login_disk_type         : pd-standard
-    #login_disk_size_gb      : 10
+    #cpu_platform               : Intel Skylake
+    #preemptible_bursting       : False
+    #external_compute_ips       : False
+    #compute_disk_type          : pd-standard
+    #compute_disk_size_gb       : 10
+    #controller_disk_type       : pd-standard
+    #controller_disk_size_gb    : 100
+    #login_disk_type            : pd-standard
+    #login_disk_size_gb         : 10
 
     # Optional GPU configuration fields
     # NOTE: This is currently functional for
     #   static nodes only.
-    #gpu_type                : nvidia-tesla-k80
-    #gpu_count               : 1
+    #gpu_type                   : nvidia-tesla-v100
+    #gpu_count                  : 8
 
-    slurm_version           : <slurm version e.g. 17.11.6>
+    slurm_version           : < Current slurm version, e.g. 17.11.7 >
     default_account         : default
-    default_users           : <comma separated list of users>
-    munge_key               : <.e.g date +%s | sha512sum | cut -d' ' -f1 >
+    default_users           : < GCP user names, comma separated >
+    munge_key               : < MUNGE Key, e.g date +%s | sha512sum | cut -d' ' -f1 >
 #  [END cluster_yaml]
