--- a/src/plugins/acct_gather_energy/xcc/Makefile.am
+++ b/src/plugins/acct_gather_energy/xcc/Makefile.am
@@ -15,8 +15,7 @@ pkglib_LTLIBRARIES = acct_gather_energy_xcc.la
 
 # Energy accounting xcc plugin. 
 acct_gather_energy_xcc_la_SOURCES = acct_gather_energy_xcc.c \
-                                     acct_gather_energy_xcc_config.c \
-                                     acct_gather_energy_xcc_config.h
+                                     acct_gather_energy_xcc.h
 
 #acct_gather_energy_xcc_la_CFLAGS = $(MYSQL_CFLAGS)
 
@@ -26,6 +25,5 @@ acct_gather_energy_xcc_la_LIBADD = $(FREEIPMI_LIBS)
 else
 
 EXTRA_acct_gather_energy_xcc_la_SOURCES = acct_gather_energy_xcc.c \
-                                     acct_gather_energy_xcc_config.c \
-                                     acct_gather_energy_xcc_config.h
+	                                     acct_gather_energy_xcc.h
 endif
