--- a/contribs/gcp/slurm-cluster.yaml
+++ b/contribs/gcp/slurm-cluster.yaml
@@ -39,12 +39,15 @@ resources:
     #cpu_platform               : Intel Skylake
     #preemptible_bursting       : False
     #external_compute_ips       : False
+
     #compute_disk_type          : pd-standard
     #compute_disk_size_gb       : 10
     #controller_disk_type       : pd-standard
     #controller_disk_size_gb    : 100
     #login_disk_type            : pd-standard
     #login_disk_size_gb         : 10
+    #nfs_apps_server            :
+    #nfs_home_server            :
 
     # Optional GPU configuration fields
     # NOTE: This is currently functional for
@@ -52,7 +55,7 @@ resources:
     #gpu_type                   : nvidia-tesla-v100
     #gpu_count                  : 8
 
-    slurm_version           : < Current slurm version, e.g. 17.11.7 >
+    slurm_version           : < Current slurm version, e.g. 17.11.8 >
     default_account         : default
     default_users           : < GCP user email addr, comma separated >
     munge_key               : < MUNGE Key, e.g date +%s | sha512sum | cut -d' ' -f1 >
