--- a/contribs/gcp/slurm-cluster.yaml
+++ b/contribs/gcp/slurm-cluster.yaml
@@ -39,6 +39,7 @@ resources:
     #cpu_platform               : Intel Skylake
     #preemptible_bursting       : False
     #external_compute_ips       : False
+    private_google_access      : True
 
     #compute_disk_type          : pd-standard
     #compute_disk_size_gb       : 10
